Changelog
=========

v0.4.2:
 - Bug fixing
   * Avoid self-crossing orders when clearing the order book

v0.4.1:
 - Bug fixing
   * Fixed boundary condition when checking limit prices
   * Fixed minimum funds checking when several outputs of the same amount are
     used

v0.4.0:
 - Persist block chain headers in disk
 - Allow overriding the data path on the command line
 - [headless] Tell apart bids and asks on list command
 - [headless] Display the minimum output on status command
 - Bug fixing
   * Faster application stopping when retrying network connection
   * Fix repeated overlay id conflict resolution
   * DEB packages creates missing directories at /var
   * Fix duplicated bitcoin funds blocking on order match

v0.3.0:
 - Load logging configuration from an external file
 - Replace TomP2P overlay by a more stable overlay network
 - Bug fixing
   * Wait for connection attempts to complete before shutting down the app

v0.2.2:
 - Bug fixing
   * Fix race condition on wallet initialization
   * Avoid the wizard to be shown more than once
   * Don't show a "green" network status if the network can reach us back
   * Fix application not closing when trying to exit in the middle of a network connection attempt
   * Log messages that cannot be serialized

v0.2.1:
 - Bug fixing
   * Prevent multiple running instances of the application
   * Fix compilation issues on IntelliJ IDEA
   * Fix opening of external links on Linux

v0.2.0:
 - Add console UI (coinffeine-headless)
 - Broker load tests added (coinffeine-benchmark)
 - Exchange status names changed to make them clearer
 - Bug fixing
   * Prevent orders to be cancelled twice
   * Allow the app to start without network access
   * Orders were not marked as completed when restored from disk

v0.1.1:
 - Fix missing msvcr100.dll in Windows platform